--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Action RPG Resources/Effects/EnemyDeathEffect.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Action RPG Resources/", "res://Action RPG Resources/Player/", "res://Action RPG Resources/Effects/")
+dock_filesystem_selected_paths=PackedStringArray("res://Codigos-scripts/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Action RPG Resources/Player/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
